--- a/soft/index.html
+++ b/soft/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>我使用的主要软件 - 我的自留地</title><meta name="Description" content="我的自留地"><meta property="og:title" content="我使用的主要软件" />
-<meta property="og:description" content="安装完系统后，你还需要选择基本的软件来方便使用。好在linux下软件众多，得益于开放性和自由免费的理念，你有众多选择，总可以选择适合你的。下" />
+<meta property="og:description" content="安装完系统后，你还需要安装基本的软件来方便使用。好在linux下软件众多，得益于开放性和自由免费的理念，你有众多选择，总可以选择适合你的。下" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://flyleon.github.io/soft/" />
 <meta property="og:image" content="https://flyleon.github.io/logo.png"/>
@@ -16,7 +16,7 @@
 <meta name="twitter:image" content="https://flyleon.github.io/logo.png"/>
 
 <meta name="twitter:title" content="我使用的主要软件"/>
-<meta name="twitter:description" content="安装完系统后，你还需要选择基本的软件来方便使用。好在linux下软件众多，得益于开放性和自由免费的理念，你有众多选择，总可以选择适合你的。下"/>
+<meta name="twitter:description" content="安装完系统后，你还需要安装基本的软件来方便使用。好在linux下软件众多，得益于开放性和自由免费的理念，你有众多选择，总可以选择适合你的。下"/>
 <meta name="application-name" content="LoveIt">
 <meta name="apple-mobile-web-app-title" content="LoveIt"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -142,7 +142,7 @@
   </ul>
 </nav></div>
             </div><div class="content" id="content"><blockquote>
-<p>安装完系统后，你还需要选择基本的软件来方便使用。好在linux下软件众多，得益于开放性和自由免费的理念，你有众多选择，总可以选择适合你的。下面便是我目前使用的软件：</p>
+<p>安装完系统后，你还需要安装基本的软件来方便使用。好在linux下软件众多，得益于开放性和自由免费的理念，你有众多选择，总可以选择适合你的。下面便是我目前使用的软件：</p>
 </blockquote>
 <h2 id="备份软件">备份软件</h2>
 <p>clonezilla是一款linux下优秀的备份软件，基于debian构建，类似ghost,但比ghost更灵活。自身可以启动，支持多种模式备份，即可以整盘备份，也可以按分区备份。可通过ventoy制作启动USB，放入ISO即可。</p>
