--- a/nginx/index.html
+++ b/nginx/index.html
@@ -127,11 +127,20 @@
                     <span>目录</span>
                     <span><i class="details-icon fas fa-angle-right"></i></span>
                 </div>
-                <div class="details-content toc-content" id="toc-content-static"><nav id="TableOfContents"></nav></div>
+                <div class="details-content toc-content" id="toc-content-static"><nav id="TableOfContents">
+  <ul>
+    <li>
+      <ul>
+        <li><a href="#安装nginx">安装nginx</a></li>
+        <li><a href="#设置nginx">设置nginx</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav></div>
             </div><div class="content" id="content"><blockquote>
 <p>nginx是常用服务器软件之一，高效，快速。我们的VPS需要它来建立网站、通过反向代理使用各种服务。从稳定性考虑，我的VPS使用Centos 7操作系统，网上资源也很丰富，便于搜索学习。</p>
 </blockquote>
-<h1 id="安装nginx">安装nginx</h1>
+<h3 id="安装nginx">安装nginx</h3>
 <ul>
 <li>安装EPEL仓库</li>
 </ul>
@@ -182,7 +191,7 @@ sudo firewall-cmd --permanent --zone=public --add-service=https
 sudo firewall-cmd --reload
 </code></pre></td></tr></table>
 </div>
-</div><h1 id="设置nginx">设置nginx</h1>
+</div><h3 id="设置nginx">设置nginx</h3>
 <ul>
 <li>查看nginx设置文件位置。</li>
 </ul>
