--- a/arch-1/index.html
+++ b/arch-1/index.html
@@ -137,13 +137,7 @@
         <li><a href="#timeshift恢复">timeshift恢复</a></li>
         <li><a href="#加快启动速度">加快启动速度</a></li>
         <li><a href="#安装-xanmod-内核">安装 xanmod 内核</a></li>
-      </ul>
-    </li>
-  </ul>
-
-  <ul>
-    <li>
-      <ul>
+        <li><a href="#efi-stub-启动">EFI STUB 启动</a></li>
         <li><a href="#清理">清理</a></li>
         <li><a href="#makepkg速度优化">makepkg速度优化</a></li>
       </ul>
@@ -252,7 +246,7 @@ grub-mkconfig -o /boot/grub/grub.cfg
 CPU类型缺省会在编译过程中提示。</div>
         </div>
     </div>
-<h1 id="efi-stub-启动">EFI STUB 启动</h1>
+<h3 id="efi-stub-启动">EFI STUB 启动</h3>
 <p>可使用EFI STUB加快启动速度。
 <div class="details admonition note open">
         <div class="details-summary admonition-title">
