--- a/gen8-1/index.html
+++ b/gen8-1/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>HP Gen8设置 - 我的自留地</title><meta name="Description" content="我的自留地"><meta property="og:title" content="HP Gen8设置" />
-<meta property="og:description" content="HP gen8时微型4盘位的服务器，比较适合做NAS。自己也海淘了一台，升级了CPU(1265v2)和内存(16M)，安装了Proxmox虚拟机" />
+<meta property="og:description" content="HP gen8是微型4盘位的服务器，比较适合做NAS。自己也海淘了一台，升级了CPU(1265v2)和内存(16M)，安装了Proxmox虚拟机" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://flyleon.github.io/gen8-1/" />
 <meta property="og:image" content="https://flyleon.github.io/logo.png"/>
@@ -16,7 +16,7 @@
 <meta name="twitter:image" content="https://flyleon.github.io/logo.png"/>
 
 <meta name="twitter:title" content="HP Gen8设置"/>
-<meta name="twitter:description" content="HP gen8时微型4盘位的服务器，比较适合做NAS。自己也海淘了一台，升级了CPU(1265v2)和内存(16M)，安装了Proxmox虚拟机"/>
+<meta name="twitter:description" content="HP gen8是微型4盘位的服务器，比较适合做NAS。自己也海淘了一台，升级了CPU(1265v2)和内存(16M)，安装了Proxmox虚拟机"/>
 <meta name="application-name" content="LoveIt">
 <meta name="apple-mobile-web-app-title" content="LoveIt"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -142,7 +142,7 @@
   </ul>
 </nav></div>
             </div><div class="content" id="content"><blockquote>
-<p>HP gen8时微型4盘位的服务器，比较适合做NAS。自己也海淘了一台，升级了CPU(1265v2)和内存(16M)，安装了Proxmox虚拟机，虚拟机内安装了windows server 2019,synology,centos 7,还是很稳定的。</p>
+<p>HP gen8是微型4盘位的服务器，比较适合做NAS。自己也海淘了一台，升级了CPU(1265v2)和内存(16M)，安装了Proxmox虚拟机，虚拟机内安装了windows server 2019,synology,centos 7,还是很稳定的。</p>
 </blockquote>
 <h3 id="ilo静态ip地址设置">ilo静态ip地址设置</h3>
 <p>ilo是gen8的特色，方便服务器远程管理，无需连接显示器核键盘。使用自动获取ip，每次连接很不方便，可以为设置静态地址方便连接。目前我安装的ilo版本是2.75，支持使用html5远程控制管理，比较方便。</p>
