--- a/arch-1/index.html
+++ b/arch-1/index.html
@@ -243,7 +243,8 @@ grub-mkconfig -o /boot/grub/grub.cfg
 <li>如想使用cachy调度器，需要在PKGBUULD文件中将<code>cachy=no</code>改为<code>yes</code>。</li>
 <li>如需自定义kernel编译内容，可在PKGBUILD文件build内加入<code>make menuconfig</code>。</li>
 <li>如需精简内核，可插上所有使用的硬件、打开所需服务后，在PKGBUILD中build内加入<code>make localmodconfig</code>。使用后最大的变化就是编译时间和内核大小大为减少，我的机器xanmod内核编译时间由近1小时减少到10份分钟，非常明显，缺点是如需增加新硬件需重新编译。</li>
-</ul></div>
+</ul>
+</div>
         </div>
     </div>
 <h2 id="efi-stub-启动">EFI STUB 启动</h2>
@@ -351,7 +352,7 @@ COMPRESSXZ=(xz -c -z - --threads=0)
                 Please enable JavaScript to view the comments powered by <a href="https://utteranc.es/">Utterances</a>.
             </noscript></div></article></div>
             </main><footer class="footer">
-        <div class="footer-container"><div class="footer-line">由 <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.63.2">Hugo</a> 强力驱动 | 主题 - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.10"><i class="far fa-kiss-wink-heart fa-fw"></i> LoveIt</a>
+        <div class="footer-container"><div class="footer-line">由 <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.80.0">Hugo</a> 强力驱动 | 主题 - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.10"><i class="far fa-kiss-wink-heart fa-fw"></i> LoveIt</a>
                 </div><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2019 - 2021</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">flyleon</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
         </div>
     </footer></div>
