--- a/simple-invest/index.html
+++ b/simple-invest/index.html
@@ -173,7 +173,9 @@
 <p>房地产
 利润高
 现金流要求低 买地 预售 回款快</p>
-<p>&lsquo;&lsquo;好公司标准&rsquo;&rsquo;</p>
+<ul>
+<li>&lsquo;&lsquo;好公司标准&rsquo;&rsquo;</li>
+</ul>
 <p>他做的事别人做不了 门槛 品牌 专利  好把握
 自己可重复做 成长 难把握</p>
 <h3 id="13行业竞争格局与公司比较优势">1.3行业竞争格局与公司比较优势</h3>
@@ -200,18 +202,20 @@
 是否是短期问题
 基本面是不是进一步恶化 反身性</p>
 <h3 id="22不是所有行业适合逆向投资">2.2不是所有行业适合逆向投资</h3>
-<p>不适合
+<ul>
+<li>不适合
 有色煤炭 趋势
 钢铁 夕阳
-计算机 变化快
-适合
+计算机 变化快</li>
+<li>适合
 食品饮料安全事故
 有无替代品
 是个股还是行业
 是主动还是被动
 是否易解决
 是否根基扎实 历史 品牌
-是否突出受害人</p>
+是否突出受害人</li>
+</ul>
 <h3 id="23最一致的时候是最危险的时候">2.3最一致的时候是最危险的时候</h3>
 <p>人多地方不要去
 案例 医药 VS银行</p>
